--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "super_hero",
-  "homepage":"https://js-alaz.github.io/ptProteccion/",
+  "homepage": "https://js-alaz.github.io/ptProteccion/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,12 +12,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build", 
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
